Started work on JSON config system for fog settings per biome. Deprecated all the API files as they are likely to be replaced by the json config system + they don't really work…